background image alignment and navbar fixes

--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     background-color: #495369;
-    background-image: url("background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 100% 0;
     color: white;
 }
 
@@ -36,7 +32,6 @@ nav {
     position: -webkit-sticky;
     top: 0;
     z-index: 1;
-    padding: 30px 0;
     font-family: 'Permanent Marker', cursive;
     font-size: 1.5rem;
 }
@@ -96,18 +91,23 @@ nav li {
 /* HEADER */
 
 header {
-    position: relative;
     text-align: center;
-    margin: 3em auto;
+    margin: 0;
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-size: 700px;
+    background-position: center top;
 }
 
 .header-img {
     width: 75%;
     max-width: 800px;
+    margin-top: 50px;
 }
 
 /* MAIN */
 
 .container {
     margin: 100px 15%;
+    text-align: left;
 }
